--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <title>Logista -Map</title>
 </head>
 
-<body>
+<body class="map-page_container">
     <nav class="navigation">
         <ul class="navigation_list">
 
@@ -79,8 +79,11 @@
                 </a>
             </li>
         </ul>
+
         <ul class="navigation_list">
+
             <li class="navigation_item">
+
                 <a href="#"
                    class="navigation_link navigation_box-rounded">
                     <div class="navigation_box--item-rounded">Create Task</div>
@@ -109,39 +112,122 @@
         </ul>
 
         <div class="hamburger_menu">
-            <div>logo</div>
-            <ul>
-                <li>dashboard</li>
-                <li>logo</li>
-                <li>logo</li>
+            <div class="hamburger_menu-header">
+                <div class="hamburger_btn-back_container">
+                    <div class="navigation_hamburgerBtn--item"></div>
+                </div>
+                <div class="hamburger_logo">
+                    <img src="assets/images/logos/svg/inner_logo.svg"
+                         alt="Logista logo">
+                </div>
+            </div>
+
+            <ul class="hamburger_list">
+                <li class="hamburger_list">
+                    <a class="hamburger_link hamburger_link--active"
+                       href="#">
+                        <span class="hamurger_link-icon_container">
+                            <i class="hamurger_link-icon fas fa-cog"></i>
+                        </span>
+                        <p class="hamburger_item-txt">dashboard</p>
+                    </a>
+                </li>
+                <li class="hamburger_list">
+                    <a class="hamburger_link "
+                       href="#">
+                        <span class="hamurger_link-icon_container">
+                            <i class="hamurger_link-icon fas fa-user"></i>
+                        </span>
+                        <p class="hamburger_item-txt">Agent</p>
+                    </a>
+                </li>
+                <li class="hamburger_list">
+                    <a class="hamburger_link "
+                       href="#">
+                        <span class="hamurger_link-icon_container">
+                            <i class="hamurger_link-icon fas fa-user-friends"></i>
+                        </span>
+                        <p class="hamburger_item-txt">Customers</p>
+                    </a>
+                </li>
+                <li class="hamburger_list">
+                    <a class="hamburger_link "
+                       href="#">
+                        <span class="hamurger_link-icon_container">
+                            <i class="hamurger_link-icon far fa-chart-bar"></i>
+                        </span>
+                        <p class="hamburger_item-txt">Analytics</p>
+                    </a>
+                </li>
+                <li class="hamburger_list">
+                    <a class="hamburger_link "
+                       href="#">
+                        <span class="hamurger_link-icon_container">
+                            <i class="hamurger_link-icon fas fa-cog"></i>
+                        </span>
+                        <p class="hamburger_item-txt">Settings</p>
+                    </a>
+                </li>
+                <li class="hamburger_list">
+                    <a class="hamburger_link "
+                       href="#">
+                        <span class="hamurger_link-icon_container">
+                            <i class="hamurger_link-icon fas fa-comment-dots"></i>
+                        </span>
+                        <p class="hamburger_item-txt">Chat</p>
+                    </a>
+                </li>
+                <li class="hamburger_list">
+                    <a class="hamburger_link "
+                       href="#">
+                        <span class="hamurger_link-icon_container">
+                            <i class="hamurger_link-icon fas fa-puzzle-piece"></i>
+                        </span>
+                        <p class="hamburger_item-txt">Extensions</p>
+                    </a>
+                </li>
+                <li class="hamburger_list">
+                    <a class="hamburger_link "
+                       href="#">
+                        <span class="hamurger_link-icon_container">
+                            <i class="hamurger_link-icon fas fa-headset"></i>
+                        </span>
+                        <p class="hamburger_item-txt">Support</p>
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
 
     <main class="map">
         <div class="map_info-col">
-            <div class="map_info-col_collaps map_info-col_collaps--tasks"><i class="fas fa-chevron-left"></i></div>
-            <div class="map_info-col__header">
-                <h2 class="map_info-col__heading">Tasks</h2>
-                <i class="map_info-col__icon fas fa-search"></i>
-            </div>
-            <div class="map_info-col__subhead">
-                <li class="map_info-col__subhead-item"><span>0</span> UNASSIGNED</li>
-                <li class="map_info-col__subhead-item map_info-col__subhead-item--active"><span>0</span> ASSIGNED</li>
-                <li class="map_info-col__subhead-item"><span>0</span> COMPLETED</li>
-            </div>
-            <div class="map_info-col__containar">
-                <div class=" tasks__empty_message-container">
-                    <p class="tasks__empty_message">
-                        no task available for the day
-                    </p>
+            <div class="map_info-col_collaps map_info-col_collaps--tasks"><i class="map_info-col_icon--tasks fas fa-chevron-left"></i></div>
+            <div class="map_tasks">
+                <div class="map_info-col__header">
+                    <h2 class="map_info-col__heading">Tasks</h2>
+                    <i class="map_info-col__icon fas fa-search"></i>
+                </div>
+                <div class="map_info-col__subhead">
+                    <li class="map_info-col__subhead-item"><span>0</span> UNASSIGNED</li>
+                    <li class="map_info-col__subhead-item map_info-col__subhead-item--active"><span>0</span> ASSIGNED</li>
+                    <li class="map_info-col__subhead-item"><span>0</span> COMPLETED</li>
+                </div>
+                <div class="map_info-col__containar">
+                    <div class=" tasks__empty_message-container">
+                        <p class="tasks__empty_message">
+                            no task available for the day
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="map_container"></div>
-        <div class="map_agents">
-            <div class="map_info-col">
-                <div class="map_info-col_collaps map_info-col_collaps--agents"><i class="fas fa-chevron-right"></i></div>
+
+        <div class="map_container">
+        </div>
+
+        <div class=" map_info-col">
+            <div class="map_info-col_collaps map_info-col_collaps--agents"><i class="map_info-col_icon--agents fas fa-chevron-right"></i></div>
+            <div class="map_agents">
                 <div class="map_info-col__header">
                     <h2 class="map_info-col__heading">Agents</h2>
                     <i class="map_info-col__icon fas fa-search"></i>
@@ -175,6 +261,24 @@
             </div>
         </div>
     </main>
+
+    <script>
+        function initMap() {
+            var options = {
+                zoom: 20,
+                center: {
+                    lat: 28.912616,
+                    lng: 26.426906
+                }
+            }
+            var maps = new google.maps.Map(document.querySelector(".map_container"), options)
+        };
+    </script>
+
+    <script async
+            defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCX54Ej_pzEV3lwwK9QNmpcbMUmc-mAxug&callback=initMap">
+    </script>
 </body>
 
 </html>
