--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
                 <a href="#"
                    class="navigation_icon navigation_link notification_btn">
                     <i class="fas fa-bell"></i>
+                    <div class="notification_number">
+                        1
+                    </div>
                 </a>
             </li>
 
@@ -320,7 +323,9 @@
                     <div class="map_info-col__containar-tabTask map_info-col__containar-tabTask--active"
                          data-taskTab="1">
                         <div class="map_info-col__item map_info-col__item-task">
-
+                            <div class="map_info-col__item--assigning">
+                                Assigned
+                            </div>
                             <div class="map_info-col__item--image_container">
                                 <div class="map_info-col__item--image">
                                     <img src="assets/images/logos/defaul-profile-pic.png"
@@ -394,6 +399,7 @@
                             <div class="map_info-col__item--image">
                                 <img src="assets/images/logos/defaul-profile-pic.png"
                                      alt="user name">
+                                <div class="agent_activity  agent_activity--online"></div>
                             </div>
                             <div class="map_info-col__item--info">
                                 <h3 class="map_info-col__item--name">Ahmed Mohamed</h3>
@@ -416,6 +422,7 @@
                             <div class="map_info-col__item--image">
                                 <img src="assets/images/logos/defaul-profile-pic.png"
                                      alt="user name">
+                                <div class="agent_activity  agent_activity--busy"></div>
                             </div>
                             <div class="map_info-col__item--info">
                                 <h3 class="map_info-col__item--name">Salah Mohamed</h3>
@@ -438,6 +445,7 @@
                             <div class="map_info-col__item--image">
                                 <img src="assets/images/logos/defaul-profile-pic.png"
                                      alt="user name">
+                                <div class="agent_activity  agent_activity--offduty"></div>
                             </div>
                             <div class="map_info-col__item--info">
                                 <h3 class="map_info-col__item--name">Zeyad Mohamed</h3>
